--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,22 @@
-lib-cov
-*.seed
-*.log
-*.csv
-*.dat
-*.out
-*.pid
-*.gz
+# Compiled source #
+###################
+bin/
+server/tmp/
+*.manifest
+node_modules/
 
-pids
-logs
-results
+# IDE generated files #
+######################
+.project
+.settings/
 
-npm-debug.log
+# OS generated files #
+######################
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+Icon?
+ehthumbs.db
+Thumbs.db
