--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "uglify-js": "1.3.4"
   },
   "bin": {
-    "sumeru": "./npm-tools/sumeru"
+    "sumeru": "./sumeru/npm-tools/sumeru"
   },
   "author": "sumeru team",
   "license": "MIT",
