--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sumeru",
-  "version": "0.7.1",
+  "version": "0.7.2",
   "description": "A Realtime Javascript RIA Framework For Mobile WebApp",
   "main": "index.js",
   "scripts": {
@@ -20,7 +20,8 @@
     "mongodb": "1.0.2",
     "shelljs": "0.0.8",
     "sockjs": "0.3.5",
-    "uglify-js": "1.3.4"
+    "uglify-js": "1.3.4",
+    "redis" : '0.8.2'
   },
   "bin": {
     "sumeru": "./sumeru/npm-tools/sumeru"
