--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "shelljs": "0.0.8",
     "sockjs": "0.3.5",
     "uglify-js": "1.3.4",
-    "redis" : '0.8.2'
+    "redis" : "0.8.2"
   },
   "bin": {
     "sumeru": "./sumeru/npm-tools/sumeru"
