--- a/sumeru/server/driver/config.json
+++ b/sumeru/server/driver/config.json
@@ -7,14 +7,14 @@
 		"login_type" : "2",
 		"tpl" : "pp",
 		"appid" : "1",
-		"sapiKey" : "0b6a775369cf9ac7d0e427e181a28b38"
+		"sapiKey" : ""
 	},
 
 	"PCS" :
 	{
 		"url" : "pcs.baidu.com",
 		"path" : "/rest/2.0/pcs",
-		"app_id" : "403798",
+		"app_id" : "",
 		"dir" : "/apps/Sumeru",
 		"type" : "image",
 		"height" : 2000
