--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
   },
   "devDependencies": {
     "mocha": "1.8.1",
-    "chai": "1.7.2"
+    "chai": "1.7.2",
+    "coveralls":"2.1.0",
+    "mocha-lcov-reporter":"0.0.1"
   },
   "bin": {
     "sumeru": "./sumeru/npm-tools/sumeru"
